2013-02-07  Sebastien Binet  <binet@cern.ch>

	* tagging as PATJobTransforms-00-05-03
	* proper python module structure
	* A python/__init__.py

2013-02-04  Sebastien Binet  <binet@cern.ch>

	* tagging as PATJobTransforms-00-05-02
	* adding wscript file for hwaf
	* A wscript

2013-01-19 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reintegrate PATJobTransforms-00-04-43-branch
    * Tagging as PATJobTransforms-00-05-01
    *** Trunk is now the main development branch again

2013-01-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * ProdSysDicTools.py Correct bad panda data format of HITS, changing to Hits
    * ArgDictTools.py 'a' tags should be interpreted from panda
    * Tagging as PATJobTransforms-00-04-43-01

2013-01-09 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * ArgDicTools.py Update to PyAMI client version 4
    *** Important: Until PyAMI changes are accepted into the release *you* are targetting
        you will need to make PATJobTransforms-00-04-43-XX tags for releases using PyAMI 2.
        Information/Help from JT devs: atlas-comp-transforms-dev@cern.ch
    * Tagging as PATJobTransforms-00-05-00

2012-12-13 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add DAOD_JPSIMUMU and DAOD_UPSIMUMU outputs to LODPK (from James Catmore)
    * Tagging as PATJobTransforms-00-04-43

2012-12-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * skeleton.MergePool.py Remove SkipBadFiles=True flag (causes undetected event loss!)
    * Reco_trf.py Add outputNTUP_TPHSG2File to LODPK (from Susumu Oda)
    * MergeNTUP_trf.py Add inputNTUP_TPHSG2File, outputNTUP_TPHSG2File to LODPK (from Susumu Oda)
    * Tagging as PATJobTransforms-00-04-42

2012-12-06 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * AODtoTAG_trf.py Implement event check for inputAODFile and outputTAGFile
    * MergePool_trf.py Implement event check for input and output AOD/ESD files
    * Tagging as PATJobTransforms-00-04-41
